# credenceKYCScriptV2

./: .gitignore  .pre-commit-config.yaml  DEVLOG.md  README.md  __init__.py  config.py  main.py  pyproject.toml  pyrightconfig.json  settings.json
.github/workflows/: ci.yml
pdf_scraping/: main.py  scraping_pdf_io.py
pdf_validation/: validate.py
src/: __init__.py  config.py  helper_functions.py  main.py
src/boundary/: README.md  excel_io.py  pdf_io.py  response_helpers.py  search.py  sharepoint_client.py  sharepoint_exceptions.py
src/boundary/excel/: excel_io.py  excel_processing.py
src/boundary/search_new/: browser_init.py  concurrent_loading.py  search_input.py  search_orchestrator.py
src/boundary/sharepoint_client_helpers/: folder_mixin.py
src/boundary/sharepoint_clients/: sharepoint_client.py  sharepoint_client_parser.py
src/core/: README.md  date_helpers.py  excel_processing.py  individual.py  pdf_processing.py  string_helpers.py  url_helpers.py
src/deprecated_sharepoint_navigation/: navigation_functions.py  sharepoint_types.py
src/excel/: excel_io.py  excel_processing.py
src/helpers/: __init__.py  response_helpers.py  string_helpers.py  url_helpers.py
src/orchestration/: pdf_orchestration.py  sharepoint_orchestration.py
src/sharepoint_navigation/: __init__.py  find_next_company.py  navigation_functions.py  orchestration.py  sharepoint_types.py
tests/: README.md
tests/factories/: contents.py  mock_response.py  test_walk_folder_contents.py  walk_folder_contents.py
tests/test_boundary/: test_excel_io.py  test_pdf_io.py
tests/test_boundary/test_sharepoint_clients/: test_sharepoint_client.py  test_sharepoint_client_parser.py
tests/test_core/: test_individuals.py  test_string_helpers.py  test_url_helpers.py
