[project]
name="KYCScriptv2"
version="0.1.0"
description="SharePoint automation"
dependencies = [
    "cloakbrowser>=0.3.31",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "hypothesis>=6.155.1",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
