[project]
name="KYCScriptv2"
version="0.1.0"
description="SharePoint automation"
dependencies = [
    "cloakbrowser>=0.3.31",
    "nest-asyncio>=1.6.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "playwright>=1.60.0",
    "pre-commit>=4.6.0",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "hypothesis>=6.155.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "tqdm>=4.68.2",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101"]
